--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "types": "out/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "grunt"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,7 @@
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.3.0",
+    "grunt-shell": "^2.1.0",
     "load-grunt-tasks": "^4.0.0"
   },
   "dependencies": {
