--- a/package.json
+++ b/package.json
@@ -19,20 +19,26 @@
   },
   "homepage": "https://github.com/ansiboy/image-components#readme",
   "devDependencies": {
+    "css-loader": "^5.0.2",
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.3.0",
     "grunt-shell": "^2.1.0",
-    "load-grunt-tasks": "^4.0.0"
+    "less": "^3.13.1",
+    "less-loader": "^5.0.0",
+    "load-grunt-tasks": "^4.0.0",
+    "maishu-chitu-scaffold": "^1.9.4",
+    "style-loader": "^2.0.0",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/requirejs": "^2.1.31",
     "csso": "^3.5.1",
-    "less": "^3.9.0",
     "maishu-chitu": "^2.0.13",
     "maishu-ui-toolkit": "^1.0.1",
-    "maishu-wuzhui": "^1.1.8",
+    "maishu-wuzhui-helper": "^1.9.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "require-less": "0.0.7",
