--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "maishu-image-components",
-  "version": "1.1.0",
+  "version": "1.2.2",
   "description": "",
   "main": "index.js",
   "types": "out/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "grunt"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
