--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maishu-image-components",
-  "version": "1.2.2",
+  "version": "1.2.5",
   "description": "",
   "main": "index.js",
   "types": "out/index.d.ts",
@@ -25,6 +25,7 @@
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.3.0",
     "grunt-shell": "^2.1.0",
+    "grunt-webpack": "^3.1.3",
     "less": "^3.13.1",
     "less-loader": "^5.0.0",
     "load-grunt-tasks": "^4.0.0",
