--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maishu-image-components",
-  "version": "1.2.5",
+  "version": "1.3.0",
   "description": "",
   "main": "index.js",
   "types": "out/index.d.ts",
@@ -37,8 +37,8 @@
   },
   "dependencies": {
     "maishu-chitu": "^2.0.13",
+    "maishu-toolkit": "^1.6.7",
     "maishu-ui-toolkit": "^1.10.0",
-    "maishu-wuzhui-helper": "^1.9.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   }
