--- a/samples/tsconfig.json
+++ b/samples/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
         "noEmit": true,
+        "target": "ES2015",
+        "module": "commonjs",
         "paths": {
             "maishu-image-components": [
                 "../out/index.d.ts"
