--- a/samples/package.json
+++ b/samples/package.json
@@ -2,8 +2,9 @@
     "dependencies": {
         "bootstrap": "^3.3.7",
         "font-awesome": "^4.7.0",
-        "maishu-chitu-react": "^1.27.0",
+        "maishu-chitu-react": "^1.30.0",
         "maishu-requirejs-plugins": "^1.3.0",
+        "maishu-toolkit": "^1.6.7",
         "maishu-ui-toolkit": "^1.9.0",
         "maishu-wuzhui-helper": "^1.9.4",
         "react": "^17.0.1",
