--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "target": "ES2015",
         "module": "CommonJS",
         "declaration": true,
         "outDir": "../out",
