--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "maishu-chitu": "^2.0.13",
+    "maishu-chitu-service": "^1.31.0",
     "maishu-toolkit": "^1.6.7",
     "maishu-ui-toolkit": "^1.10.0",
     "react": "^16.7.0",
