--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maishu-image-components",
-  "version": "1.5.15",
+  "version": "1.6.0",
   "description": "",
   "main": "index.js",
   "types": "out/index.d.ts",
@@ -37,6 +37,7 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "canvas": "^2.8.0",
     "maishu-chitu-service": "^1.32.0",
     "maishu-toolkit": "^1.6.7",
     "maishu-ui-toolkit": "^1.10.0",
