--- a/package.json
+++ b/package.json
@@ -1,52 +1,52 @@
 {
-  "name": "maishu-image-components",
-  "version": "1.6.18",
-  "description": "",
-  "main": "index.js",
-  "types": "out/index.d.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "grunt",
-    "start": "grunt demo"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ansiboy/image-components.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ansiboy/image-components/issues"
-  },
-  "homepage": "https://github.com/ansiboy/image-components#readme",
-  "devDependencies": {
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.0.11",
-    "css-loader": "^5.0.2",
-    "grunt": "^1.0.1",
-    "grunt-browserify": "^5.3.0",
-    "grunt-shell": "^2.1.0",
-    "grunt-webpack": "^3.1.3",
-    "less": "^3.13.1",
-    "less-loader": "^5.0.0",
-    "load-grunt-tasks": "^4.0.0",
-    "maishu-chitu-scaffold": "^1.9.4",
-    "require-less": "0.0.7",
-    "style-loader": "^2.0.0",
-    "webpack": "^4.26.1",
-    "webpack-cli": "^3.1.2"
-  },
-  "dependencies": {
-    "canvas": "^2.8.0",
-    "maishu-chitu-service": "^1.40.2",
-    "maishu-image-service": "^1.12.0",
-    "maishu-toolkit": "^1.6.7",
-    "maishu-ui-toolkit": "^1.10.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
-  },
-  "files": [
-    "dist",
-    "out"
-  ]
+    "name": "maishu-image-components",
+    "version": "1.7.0",
+    "description": "",
+    "main": "out/index.js",
+    "types": "out/index.d.ts",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "grunt",
+        "start": "grunt demo"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ansiboy/image-components.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/ansiboy/image-components/issues"
+    },
+    "homepage": "https://github.com/ansiboy/image-components#readme",
+    "devDependencies": {
+        "@types/react": "^16.7.18",
+        "@types/react-dom": "^16.0.11",
+        "css-loader": "^5.0.2",
+        "grunt": "^1.0.1",
+        "grunt-browserify": "^5.3.0",
+        "grunt-shell": "^2.1.0",
+        "grunt-webpack": "^3.1.3",
+        "less": "^3.13.1",
+        "less-loader": "^5.0.0",
+        "load-grunt-tasks": "^4.0.0",
+        "maishu-chitu-scaffold": "^1.9.4",
+        "require-less": "0.0.7",
+        "style-loader": "^2.0.0",
+        "webpack": "^4.26.1",
+        "webpack-cli": "^3.1.2"
+    },
+    "dependencies": {
+        "canvas": "^2.8.0",
+        "maishu-chitu-service": "^1.40.2",
+        "maishu-image-service": "^1.12.0",
+        "maishu-toolkit": "^1.6.7",
+        "maishu-ui-toolkit": "^1.10.0",
+        "react": "^16.7.0",
+        "react-dom": "^16.7.0"
+    },
+    "files": [
+        "dist",
+        "out"
+    ]
 }
